# python-for-data-science

./: README.md
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
0_starting/ex02/: find_ft_type.py
0_starting/ex03/: NULL_not_found.py
0_starting/ex04/: whatis.py
0_starting/ex05/: building.py
0_starting/ex06/: filterstring.py  ft_filter.py
0_starting/ex07/: sos.py
0_starting/ex08/: Loading.py  tester.py
0_starting/ex09/: tester.py
0_starting/ex09/ft_package/: README.md  pyproject.toml
0_starting/ex09/ft_package/src/ft_package/: __init__.py  count_in_list.py
1_array/ex00/: give_bmi.py  tester.py
1_array/ex01/: array2D.py  tester.py
1_array/ex02/: load_image.py  tester.py
1_array/ex03/: load_image.py  main.py  zoom.py
1_array/ex04/: load_image.py  rotate.py  tester.py  zoom.py
1_array/ex05/: load_image.py  pimp_image.py  tester.py
2_DataTable/ex00/: load_csv.py  tester.py
2_DataTable/ex01/: aff_life.py
2_DataTable/ex02/: aff_pop.py  load_csv.py
2_DataTable/ex03/: projection_life.py
3_OOP/ex00/: S1E9.py
3_OOP/ex01/: S1E7.py  S1E9.py
3_OOP/ex02/: DiamondTrap.py  S1E9.py
3_OOP/ex03/: ft_calculator.py
4_Dod/ex00/: statistics.py
4_Dod/ex01/: in_out.py
4_Dod/ex02/: callLimit.py
4_Dod/ex03/: new_student.py
OOP/ex00/: S1E9.py
OOP/ex01/: S1E7.py  S1E9.py
OOP/ex02/: DiamondTrap.py  S1E7.py
