[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ft_package"]

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Maha Faisal", email="mahafm1998@gmail.com" },
]
description = "A sample test package"
readme = "README.md"
# requires-python = "3.10"

license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/MahaaFaisal/python-for-data-science"